replaced span with h1 tag and fixed contrast issue

--- a/www/assets/css/home.scss
+++ b/www/assets/css/home.scss
@@ -465,7 +465,7 @@ $promo-carousel-height: 200px;
     .material-icons {
       font-size: 60px;
       font-weight: 200;
-      color: $medium-gray;
+      color: $dark-gray;
     }
   }
 
